# latent-visual-reasoning-gemini

./: .gitignore  .resource_finder_complete  CODE_WALKTHROUGH.md  README.md  REPORT.md  download_clevr_sample.py  download_papers.py  literature_review.md  planning.md  pyproject.toml  requirements.txt  resources.md  run_demo.sh
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_gemini_transcript.jsonl  research_prompt.txt  resource_finder_gemini_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: ablation_metrics.txt  causality_metrics.txt  metrics.json  ood_metrics.txt  slot_metrics.txt  test_metrics.json
results/models/: baseline_model.pth  slot_model.pth  slot_model_no_interaction.pth
src/: analyze_ablation.py  analyze_attention.py  analyze_causality.py  analyze_counterfactual.py  analyze_long_term.py  analyze_ood.py  analyze_slots.py  baseline.py  data_gen.py  eval_debug.py  evaluate.py  gen_collision.py  gen_ood_data.py  modules.py  train.py  train_ablation.py  visualize_gif.py  visualize_ood_failure.py
